--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "graphql-passport": "^0.6.8",
     "mongoose": "^8.8.1",
     "nodemon": "^3.1.7",
-    "passport": "^0.7.0"
+    "passport": "^0.7.0",
+    "passport-local": "^1.0.0"
   }
 }
